<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Contato_Activity">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/detalhe_contato" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="124dp"
        android:layout_marginTop="64dp"
        android:text="@string/detalhes_contato"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView7"
        android:layout_marginTop="158dp"
        android:text="@string/email_contato"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView7"
        android:layout_marginTop="208dp"
        android:text="@string/telefone_contato"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView7"
        android:layout_marginBottom="233dp"
        android:text="@string/celular_contato"
        android:textAppearance="@android:style/TextAppearance.Medium" />
</RelativeLayout>