<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ClienteActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/detalhe_cliente" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="62dp"
        android:text="@string/cliente_detalhes"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_green_light" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="163dp"
        android:src="@drawable/cliente1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="234dp"
        android:text="@string/texto_cliente1"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginBottom="183dp"
        android:src="@drawable/cliente2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginBottom="140dp"
        android:text="@string/texto_cliente2"
        android:textAppearance="@android:style/TextAppearance.Medium" />
</RelativeLayout>